# BreakTime

./: .gitignore  BreakTime.desktop  CMakeLists.txt  StyleResources.qrc  breakwindows.cpp  breakwindows.h  breakwindows.ui  declensionSpinBox.h  declensionspinbox.cpp  declensionspinbox.h  icon.aps  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  private_win.cpp  private_win.h  private_win.ui  private_window.cpp  private_window.h  readme.md  screentimetracker.cpp  screentimetracker.h  screentimetracker.ui  style.qrc
.qt/: QtDeploySupport.cmake
qss/: icon.rc  style.css
